--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
         <script>
             function calculate() {
-                var num1 = parseInt(document.getElementById('num1').value);
-                var num2 = parseInt(document.getElementById('num2').value);
+                var num1 = parseFloat(document.getElementById('num1').value);
+                var num2 = parseFloat(document.getElementById('num2').value);
                 var operator = document.getElementById('operator').value;
 
                 var result;
@@ -96,7 +96,11 @@
                         } else {
                             result = num1 % num2;
                         }
-                    } else {
+                    } else if (operator === '**')
+                    {
+                        result = num1 ** num2
+                    }
+                    else {
                         result = 'Error';
                     }
                 }
@@ -115,6 +119,7 @@
                 <option value="*">*</option>
                 <option value="/">/</option>
                 <option value="%">%</option>
+                <option value="**">**</option>
             </select>
 
             <label for="num2">Number 2:</label>
